@@ -50,7 +50,6 @@ Build-Depends: cmake (>= 2.6),
                protobuf-compiler,
                python-all-dev,
                python-pyrex,
-               metacity-common,
                gnome-control-center-dev,
 Standards-Version: 3.9.3
 Vcs-Bzr: https://code.launchpad.net/+branch/ubuntu/compiz
